--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "http-one-oh-no",
   "version": "1.0.0",
-  "description": "Makes HTTP 1.0 requests",
+  "description": "Make HTTP 1.0 requests",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha"
@@ -14,13 +14,14 @@
   "author": "Eric McCarthy <eric@limulus.net>",
   "license": "MIT",
   "devDependencies": {
-    "mocha": "^1.18.2"
+    "mocha": "^1.18.2",
+    "portfinder": "^0.2.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/limulus/http-one-oh-no.git"
   },
-    "bugs": {
+  "bugs": {
     "url": "https://github.com/limulus/http-one-oh-no/issues"
   },
   "homepage": "https://github.com/limulus/http-one-oh-no"
